--- a/paper/hillclimbing.tex
+++ b/paper/hillclimbing.tex
@@ -651,13 +651,13 @@ The problem setup is as follows. Given $M$ covariate groups, suppose $\boldsymbo
 \end{array}
 \end{equation}
 
-As $\|\cdot\|_2$ (or $|\cdot|$) is not differentiable in any direction at ${\bf 0}$ (or $0$) and is differentiable in all directions elsewhere, it is straightforward to show that 
+Note the addition of a small, fixed ridge penalty to ensure strong convexity. As $\|\cdot\|_2$ (or $|\cdot|$) is not differentiable in any direction at ${\bf 0}$ (or $0$) and is differentiable in all directions elsewhere, it is straightforward to show that 
 \begin{equation}
 S_{\boldsymbol \lambda} = span(\boldsymbol I_{I(\boldsymbol\lambda)})
 \end{equation}
 where $I(\boldsymbol\lambda) = \{i | \hat{\boldsymbol{\theta}}_i(\boldsymbol\lambda) \ne 0\}$ are the nonzero indices of $\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})$. 
 
-This problem satisfies all three conditions in Theorem~\ref{thethrm}. Since the logic for the first two conditions are exactly the same, we just give the calculations for the third condition.
+This problem satisfies all three conditions in Theorem~\ref{thethrm}. Since the logic for the first two conditions is exactly the same, we just give the calculations for the third condition.
 
 \begin{itemize}
 \item[] Condition 3: The Hessian matrix of $L_T(\cdot, \boldsymbol{\lambda})$ with respect to the columns of $I_{I(\boldsymbol \lambda)}$ is
@@ -741,7 +741,7 @@ sgn(\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda}))
 
 
 \subsubsection{Generalized Lasso}
-The generalized lasso \citep{roth2004generalized} penalizes the $\ell_1$ norm of the coefficients $\boldsymbol \theta$ weighted by some matrix $D$. Depending on the choice of $D$, the generalized lasso induces different structural constraints on the regression coefficients. Special cases include the fused lasso, trend filtering, and wavelet smoothing \citep{tibshirani2005sparsity}, \citep{kim2009ell_1}, \textcolor{red}{who to cite?}.
+The generalized lasso \citep{roth2004generalized} penalizes the $\ell_1$ norm of the coefficients $\boldsymbol \theta$ weighted by some matrix $D$. Depending on the choice of $D$, the generalized lasso induces different structural constraints on the regression coefficients. Special cases include the fused lasso, trend filtering, and wavelet smoothing \citep{tibshirani2005sparsity}, \citep{kim2009ell_1}, \textcolor{red}{who to cite? A Donoho paper?}.
 
 To tune the regularization parameter $\lambda$, we formulate the generalized lasso as a joint optimization problem:
 
@@ -765,7 +765,7 @@ S_\lambda = \mathcal{N}(I_{I(\lambda)}^\top D)
 \end{equation}
 Let $U_\lambda$ be an orthonormal basis for $\mathcal{N}(I_{I(\lambda)}^\top D)$. Note
 \begin{equation}
-I - D^\top I_{I(\lambda)} \left ( D^\top D\right )^{-1} I_{I(\lambda)}^\top D = U_\lambda U_\lambda^\top.
+I - D^\top I_{I(\lambda)} \left ( D^\top D\right )^{-1} I_{I(\lambda)}^\top D = U_\lambda U_\lambda^\top. \textrm{\textcolor{red}{Is $D^\top D$ necessarily invertible? Do we need this?}}
 \end{equation}
 
 The first two conditions in Theorem~\ref{thethrm} are satisfied by similar reasoning to that discussed in Section~\ref{sec:enet}. For the third condition, we need to check that the Hessian matrix is invertible.
@@ -875,14 +875,14 @@ where
 \in
 \mathbb{R}^{n\times n}
 \end{equation}
-Note that $\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})$ in \eqref{aplmProblem} must include estimates of $g(z_i)$ for  $z_i$ from the validation set. We accomplish this by constructing $\boldsymbol{D}(\boldsymbol{z})$ from the nonlinear predictors from the training and validation sets.
+We again add an $\epsilon$ of ridge to ensure a differentiable hessian. Note that $\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})$ in \eqref{aplmProblem} must include estimates of $g(z_i)$ for  $z_i$ from the validation set. We accomplish this by including $z_i$ values from both training and validation sets in constructing $\boldsymbol{D}(\boldsymbol{z})$.
 
-In this example, the lasso is the only penalty with points that are not differentiable. Let the nonzero indices of $\hat{\boldsymbol{\beta}}$ be denoted $I(\boldsymbol\lambda) = \{i | \hat{\boldsymbol{\beta}}_i(\boldsymbol\lambda) \ne 0\}$. The differentiable space is then
+In this example, the lasso is the part which is not everywhere differentiable. Let the nonzero indices of $\hat{\boldsymbol{\beta}}(\boldsymbol\lambda)$ be denoted $I(\boldsymbol\lambda) = \{i | \hat{\boldsymbol{\beta}}_i(\boldsymbol\lambda) \ne 0\}$. The differentiable space is then
 \begin{equation}
 S_{\boldsymbol{\lambda}} = C(\boldsymbol I_{I(\boldsymbol\lambda)}) \oplus \mathbb{R}^n
 \end{equation}
 
-By the same reasoning as before, the first two conditions of Theorem~\ref{thethrm} are satisfied. We then check for the third condition.
+By the same reasoning as before, the first two conditions of Theorem~\ref{thethrm} are satisfied. We now check for the third condition.
 \begin{itemize}
 \item[] Condition 3: The Hessian matrix of $L_T(\cdot, \boldsymbol{\lambda})$ with respect to the basis 
 \begin{equation}
@@ -928,7 +928,7 @@ We now calculate the gradient of the validation loss. Given $I(\boldsymbol \lamb
 \end{array}
 \label{aplmRestricted}
 \end{equation}
-As before we can now characterize our solution by setting the gradient of our now-locally-smooth optimization problem to $0$. We then implicitly differentiate this gradient-based characterization and solve for $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol\eta}(\boldsymbol{\lambda}) $ and $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol\theta}(\boldsymbol{\lambda})$. We get the following set of equations:
+As before we can now characterize our solution by setting the gradient of our now-locally-smooth optimization problem to $0$. We then implicitly differentiate this gradient-based characterization and solve for $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol\eta}(\boldsymbol{\lambda}) $ and $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol\theta}(\boldsymbol{\lambda})$. We get the following system of equations:
 \begin{equation}
 \begin{bmatrix}
 \frac{\partial}{\partial \boldsymbol{\lambda}} \hat{\boldsymbol\theta}(\boldsymbol{\lambda})\\
@@ -996,13 +996,13 @@ By the chain rule, the gradient of the validation loss is
 \subsection{Gradient Descent Details}
 Here we discuss choice of step size and our convergence criterion.
 
-There are many possible choices for our step size sequence $\{t_k\}$. Popular choices for convex problems are discussed in \citet{boyd2004convex}. We chose a backtracking line search as discussed in Chapter 9. In our examples initial step size was between 0.5 and 1 and we backtrack with parameters $\alpha = 0.01$ and $\beta \in [0.01, 0.1]$. Details backtracking line search are given in the Appendix. During gradient descent, it is possible that the step size will result in a negative regularization parameter; we set the minimum threshold for the regularization parameter value to $1e$-10.
+There are many possible choices for our step size sequence $\{t_k\}$. Popular choices for convex problems are discussed in \citet{boyd2004convex}. We chose a backtracking line search as discussed in Chapter 9. In our examples initial step size was between 0.5 and 1 and we backtrack with parameters $\alpha = 0.01$ and $\beta \in [0.01, 0.1]$. Details backtracking line search are given in the Appendix. During gradient descent, it is possible that the step size will result in a negative regularization parameter; we reject any step that would set a regularization parameter to below a minimum threshold of $1e$-10.
 
 Our convergence criterion is based on the change in our validation loss between iterates. More specifically, we stop our algorithm when
 \[
-L \left( \boldsymbol{y}_V, f_{\hat{\theta}(\boldsymbol{\lambda}^{(k+1)})}(\boldsymbol{X}_V)\right) - L \left( \boldsymbol{y}_V, f_{\hat{\theta}(\boldsymbol{\lambda}^{(k)})}(\boldsymbol{X}_V)\right) \leq \epsilon
+L \left( \boldsymbol{y}_V, f_{\hat{\theta}(\boldsymbol{\lambda}^{(k+1)})}(\boldsymbol{X}_V)\right) - L \left( \boldsymbol{y}_V, f_{\hat{\theta}(\boldsymbol{\lambda}^{(k)})}(\boldsymbol{X}_V)\right) \leq \delta
 \]
-for some prespecified tolerance, $\epsilon$. For the results in this manuscript we use $\epsilon = 1e$-5.
+for some prespecified tolerance, $\delta$. For the results in this manuscript we use $\epsilon = 1e$-5.
 
 \subsection{Accelerated Gradient Descent}
 We also use a modification of Algorithm~\ref{alg:gradDescent}, based on the work of \citet{nesterov1983method}. For smooth convex problems, these ``accelerated'' algorithms have faster worst-case convergence than gradient (while maintaining the same per-iteration complexity). In practice, these accelerated algorithms often vastly improve performance. In particular we follow the recipe from \citet{o2013adaptive} which performs adaptive restarts whenever the function value increases. As before, we choose step size using backtracking. We present the exact details in Algorithm~\ref{alg:accGradDescent}.
@@ -1101,15 +1101,15 @@ We also use a modification of Algorithm~\ref{alg:gradDescent}, based on the work
 
 We ran two simulation studies for this paper. The purpose of the first set of simulations is to compare the performance and efficiency of grid-based and descent-based joint optimization across different regularization methods.
 
-Grid-based joint optimization was performed using cross validation over a grid of parameter values. Descent-based joint optimization was implemented with the two methods gradient descent and accelerated gradient descent with adaptive restarts.
+Grid-based joint optimization was performed using cross validation over a grid of parameter values. Descent-based joint optimization was implemented with the two methods gradient descent and accelerated gradient descent with adaptive restarts. \textcolor{red}{Did we use cross-validation for descent-based method? We probably should if we are comparing to CV for grid; and then we should probably discuss it somewhere, maybe in an appendix?}
 
-The simulation experiments were on the example regressions elastic net, sparse group lasso, and APLM. For each experiment, 30 datasets were generated. Below, we describe the simulation settings, followed by a discussion of the results.
+We ran simulation experiments for the elastic net, sparse group lasso, and APLM. For each experiment, 30 datasets were generated. Below, we describe the simulation settings, followed by a discussion of the results.
 
-We solved the inner optimization problem in descent-based joint optimization and grid-based optimization with the splitting conic solver (SCS) in CVXPY \citep{cvxpy}. We are only interested in the relative timings of the methods, so we did not use any custom-solvers.
+We solved the inner optimization problem in descent-based joint optimization and grid-based optimization with the splitting conic solver (SCS) in CVXPY \citep{cvxpy}.
 
 \subsection{Elastic net}
-Each simulated dataset consisted of 80 training and 20 validation observations with 250 predictors. The predictors were randomly generated from a normal distribution with mean zero, variance one, and pairwise correlation between predictors $x_i$ and $x_j$ as $0.5^{|i-j|}$.
-The response vector $y$ was generated by
+Each simulated dataset consisted of 80 training and 20 validation observations with 250 predictors. The $x_i$ were marginally distributed $N(0,1)$ with $cor(x_i,x_j) = 0.5^{|i-j|}$.
+The response vector $y$ was generated as
 \begin{equation}
 y = X\beta + \sigma \epsilon
 \end{equation}
@@ -1127,7 +1127,7 @@ Each simulated dataset consisted of 60 training and 15 validation observations w
 \begin{equation}
 y = \sum\limits_{j=1}^3 X^{(j)} \beta^{(j)} + \sigma \epsilon
 \end{equation}
-where $\beta^{(j)} = (1, 2, 3, 4, 5, 0, ..., 0)$ for $j = 1, 2, 3$ and $\epsilon \sim N(0, 1)$. $\sigma$ was chosen such that the signal to noise ratio was 2. The number of groups $m$ in the criterion was 150.
+where $\beta^{(j)} = (1, 2, 3, 4, 5, 0, ..., 0)$ for $j = 1, 2, 3$ and $\epsilon \sim N(0, 1)$. $\sigma$ was chosen such that the signal to noise ratio was 2. There were $m=150$ groups with $10$ covariates each.
 
 Both descent-based methods were initialized at (0.01, 0.01), (1, 1), and (100, 100). Grid-based joint optimization used a $10 \times 10$ grid from 1e-5 to $\max(\{||X^{(j)T}y ||_2\}_{j=1,..., m})$.
 
@@ -1136,12 +1136,12 @@ Both descent-based methods were initialized at (0.01, 0.01), (1, 1), and (100, 1
 Each simulated dataset consisted of 100 training and 25 validation observations with 20 linear predictors and one nonlinear predictor. Linear predictors were generated such that the first two groups of three features were highly correlated and the rest of the features were generated from a standard normal distribution.
 \begin{equation}
 \begin{array}{c}
-x_i = Z_1 + \epsilon_i \text{ for } i=1, 2, 3 \\
-x_i = Z_2 + \epsilon_i \text{ for } i= 4, 5, 6 \\
+x_i = Z_1 + \delta_i \text{ for } i=1, 2, 3 \\
+x_i = Z_2 + \delta_i \text{ for } i= 4, 5, 6 \\
 x_i \sim N(0,1) \text{ for } i = 7, ..., 20
 \end{array}
 \end{equation}
-where $Z_1 \sim N(0,1)$, $Z_2 \sim N(0,1)$, and $\epsilon_i \sim N(0, \frac{1}{16})$. Nonlinear predictors $z$ were randomly drawn from the standard uniform distribution. The response $y$ was constructed as
+where $Z_1 \sim N(0,1)$, $Z_2 \sim N(0,1)$, and $\delta_i \sim N(0, \frac{1}{16})$. Nonlinear predictors $z$ were randomly drawn from the standard uniform distribution. The response $y$ was constructed as
 \begin{equation}
 y = X\beta + \kappa g(z) + \sigma \epsilon
 \end{equation}
@@ -1220,9 +1220,9 @@ We also note that descent-based joint optimization is faster than grid-based opt
 
 In this second simulation study, we test descent-based joint optimization on regressions with more than two regularization parameters. We are interested in whether descent-based joint optimization can find better model fits and also run efficiently.
 
-We experiment with generalizations of the simple regressions from the previous section. That is, for the sparse group lasso, we made an ``unpooled" version in which the number of regularization parameters is one plus the number of covariate groups. For the APLM example, we added ridge penalty as a third regularization term. Details regarding the joint optimization problem formulations and gradient derivations for these generalized regression models are located in the Appendix.
+We experiment with generalizations of the simple regressions from the previous section. That is, for the sparse group lasso, we tried an ``unpooled" version in each covariate group is allowed its own regularization parameter. For the APLM example, we added ridge penalty as a third regularization term. Details regarding the joint optimization problem formulations and gradient derivations for these generalized regression models are located in the Appendix.
 
-We used gradient descent to tune the parameters for these more complex regularization methods. For baseline comparison, we also tuned the parameters for the original two-parameter regressions. Finally, we compared the accuracy of the models on a separate test set. The results show that gradient descent produced model fits for the generalized regressions that achieved lower test error. In addition, it remained computationally tractable, even in cases with over a hundred regularization parameters.
+We used gradient descent to tune the parameters for these more complex regularization methods. For baseline comparison, we also tuned \textcolor{red}{(also using gradient descent?)} the parameters for the original two-parameter regressions. Finally, we compared the accuracy of the models on a separate test set. The results show that gradient descent produced model fits for the generalized regressions that achieved lower test error. In addition, it remained computationally tractable, even in cases with over a hundred regularization parameters.
 
 \subsection{Unpooled sparse group lasso}
 
@@ -1231,12 +1231,12 @@ In unpooled sparse group lasso, the group lasso penalty parameter $\lambda_1$ is
 \begin{equation}
 \frac{1}{2n} 
 \left \| \boldsymbol{y}_T - \boldsymbol{X}_T \boldsymbol{\theta} \right \|^2_2
-\sum_{m=M}^m \lambda_1^{(m)} \| \boldsymbol \theta^{(m)} \|_2
+\sum_{m=1}^M \lambda_1^{(m)} \| \boldsymbol \theta^{(m)} \|_2
 + \lambda_2 \| \boldsymbol \theta \|_1
 + \frac{1}{2} \epsilon \| \boldsymbol\theta \|_2^2
 \label{unpooledSGL}
 \end{equation}
-The number of regularization parameters in \eqref{unpooledSGL} is then one plus the number of coefficient groups. This generalized criterion gives models the additional flexibility of having different thresholds for setting covariate and covariate group effects to zero. Therefore, unpooled sparse group lasso can potentially better model covariate groups with very different distributions.
+The number of regularization parameters in \eqref{unpooledSGL} is then $M+1$. This generalized criterion gives models the additional flexibility of having different thresholds for setting covariate and covariate group effects to zero. Therefore, unpooled sparse group lasso can potentially better model covariate groups with very different distributions.
 
 We ran three experiments with different numbers of covariate groups $m$ and total covariates $p$, as given in Table \ref{table:unpooled}. The simulation settings were similar to the previous sparse group lasso simulation study. We used the same grid for grid-based joint optimization. For gradient descent, the $m+1$ regularization parameters were initialized at $1e\text{-}4 \times \boldsymbol 1^\top$, $1e\text{-}3 \times \boldsymbol 1^\top$, and $1e\text{-}2 \times \boldsymbol 1^\top$.
 
@@ -1299,9 +1299,7 @@ We generalized the APLM criterion in \eqref{aplmProblem} by using the elastic ne
 + \frac{1}{2} \lambda_3 \| D^{(2)} \boldsymbol \theta \|_2^2
 + \frac{1}{2} \epsilon \| \boldsymbol{\theta} \|_2^2
 \end{equation}
-In the simulation, we tested the hypothesis that having the elastic net could better model data with sparse effects and strongly correlated predictors.
-
-We ran experiments on three nonlinear functions of varying levels of smoothness as given in Table \ref{ref:aplm}. The simulation settings were similar to before. The only difference was that gradient descent was initialized at $10^i \times \boldsymbol 1^\top$ for $i=-4, ..., 1$.
+We ran experiments on three nonlinear functions of varying levels of smoothness as given in Table \ref{ref:aplm}. The simulation settings were similar to before \textcolor{red}{cite a table or section for ``before''}. The only difference was that gradient descent was initialized at $10^i \times \boldsymbol 1^\top$ for $i=-4, ..., 1$. \textcolor{red}{Is this a 3d or 2d grid search?}
 
 Models were judged by their accuracy on the test set. In addition, we measured the error in the fitted linear model and nonparametric estimates with $\beta$ error=$||\beta - \hat \beta||_2^2$ and $\theta$ error=$|| g(z) - \theta ||_2^2$, respectively.
 
@@ -1365,7 +1363,7 @@ Gradient Descent & 0.41 & 4.85 & 4.08 & 54.63 \\
 %\label{fig:modelfits}
 %\end{figure}
 
-\section{Application to Real Data}
+\section{Application to Biological Data}
 In this section, we apply descent-based joint optimization to real data.
 
 We apply un-pooled sparse group lasso to the data analyzed in \citet{simon2013sparse}. For comparison, we also fit the sparse group lasso model. In this problem, we are interested in finding genes from gene pathways that are driving Crohn's Disease and Ulcerative Colitis.
